# acl

./: readme.md
10-common/include/: acl_c.h  acltype.h
20-acl_lib/common/: acl_common.c
20-acl_lib/doc/: acl_doc.docx  acl_doc.vsdx
20-acl_lib/include/: acl_common.h  acl_lock.h  acl_manage.h  acl_memory.h  acl_msgqueue.h  acl_socket.h  acl_task.h  acl_telnet.h  acl_time.h  version.h
20-acl_lib/prj_linux/: CMakeLists.txt  Makefile-  readme.txt
20-acl_lib/prj_win32/: acl_lib.vcxproj  acl_lib.vcxproj.filters
20-acl_lib/src/: acl_c.cpp  acl_lock.cpp  acl_manage.cpp  acl_memory.cpp  acl_msgqueue.cpp  acl_socket.cpp  acl_task.cpp  acl_telnet.cpp  acl_time.cpp  version.cpp
